# prof

./: CLAUDE.md  LICENSE  MAGIC-ROUTES.md  README.md
src/client/javascript/: README.md  package.json  prof.js
src/client/rust/prof-rs/: Cargo.toml
src/client/rust/prof-rs/src/: lib.rs
src/server/node/: package-lock.json  package.json  prof.js
src/server/node/config/: default.js  local.js
src/server/node/src/magic/: magic.js
src/server/node/src/persistence/: db.js
src/server/node/src/profiles/: profiles.js
test/mocha/: client.js  package.json  server.js
