[package]
name = "prof-rs"
version = "0.1.0"
edition = "2021"
description = "Rust client for Prof - Planet Nine profile service"
license = "MIT"
authors = ["planetnineisaspaceship"]
repository = "https://github.com/planet-nine-app/prof"

[dependencies]
reqwest = { version = "0.11", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
sessionless = { version = "0.1.1" }
thiserror = "1.0"
bytes = "1.0"
mime = "0.3"